--- a/.github/workflows/producao.yml
+++ b/.github/workflows/producao.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm install
 
       - name: Gerando documentação do swagger.json
-        run: npm run autoGenDoc
+        run: npm run autoDoc
 
       - name: Apagando pasta node_modules
         run: rm -rf node_modules
